[tool.poetry]
name = "flo_ai"
version = "1.0.7-rc2"
description = "A easy way to create structured AI agents"
authors = ["rootflo <*@rootflo.ai>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "flo_ai" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.28.1"
pillow = "^10.3.0"
pydantic = "^2.9.2"
openai = "^1.77.0"
google-genai = "^1.25.0"
matplotlib = { version = "^3.7.0", optional = true }
networkx = { version = "^3.0", optional = true }
anthropic = "^0.57.1"
aiohttp = "^3.12.14"
google-cloud-aiplatform = "^1.109.0"
pypdf = "^4.2.0"
pymupdf4llm = "^0.0.17"
chardet = ">=3.dev0,<4.dev0"

[tool.poetry.extras]
vizualize = ["matplotlib", "networkx"]

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
botocore = "^1.36.1"
ipykernel = "^6.29.5"
db-sqlite3 = "^0.0.1"
peewee = "^3.17.6"
python-dotenv = "^1.0.1"
wikipedia = "^1.4.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"
reportlab = "^4.4.3"
streamlit = "^1.42.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
