[project]
name = "flo_ai_tools"
version = "0.0.1"
description = "Some good tool implementations for flo-ai"
authors = [{ name = "rootflo", email = "*@rootflo.ai" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = ["redshift-connector>=2.1.5,<3"]

[dependency-groups]
dev = [
    "boto3==1.36.1",
    "botocore==1.36.1",
]

[tool.hatch.build.targets.sdist]
include = ["flo_ai_tools"]

[tool.hatch.build.targets.wheel]
include = ["flo_ai_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
